### [v0.4] - 2026-01-XX
#### Added
- 

#### Changed
- DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).

#### Fixed
- Logs are not being stored inside storage directory.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 

---

### [v0.3] - 2025-12-17
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.
- API Response success boolean field.
- AlreadyAuthorizedException for handling unauthorized exclusive endpoints.
- Endpoint argument unauthorizedExclusive for handling unauthorized exclusive endpoints.
- LogWorker::debug() for debugging system logs.
- MailWorker for sending crafted and dynamic emails.
- Mail component for crafting mail objects.
- Item::mail and Item::file for helping with Mail crafting.
- AUTH_DOMAIN env variable for defining global authorization domain.
- Config::configureSecurity(...) for defining security policies against DDoS attacks and input length. 
- DataWorker warnings against SQL injection.  

#### Changed
- Skeleton: Update build.sh to account for last changes.
- DataWorker now uses Collection and Item components.
- Router now uses Collection and Item components.
- Template now uses Collection and Item components.
- PHP Version downgrade to 8.4 to support hosting deployment.
- System logs now are collapsed so they take less space.
- LogWorker prefix for each type of log.
- Template component now sanitizes file paths.
- AuthSlave::validateCSRF() now uses hash_equals() for improved security.
- Improved PDO Exception handling in DataSlave.
- Jquery is now loaded from local files.
- HeaderSlave::addSecurityHeaders() now uses a more secure CSP.
