@@ -30,7 +30,7 @@ OR (not recommended)
 - Research and fixing of performance issues.
 - ~~Improvement of DataSlave: regex filtering for injected strings.~~
 - Implementation of Request file retrieval controls.
-- Implementation of rate-limiting configuration.
+- ~~Implementation of rate-limiting configuration.~~
 - Addition of StorageWorker for cache and file storage management.
 
 ### Roadmap: v1.0
