@@ -34,9 +34,9 @@ final class Config {
     private bool $privacyRegisterOrigin = true;
         public function isPrivacyRegisterOrigin(): bool { return $this->privacyRegisterOrigin; }
 
-    private int $securityRateLimit = 100;
+    private int $securityRateLimit = 0;
         public function getSecurityRateLimit(): int { return $this->securityRateLimit; }
-    private int $securityInputLengthLimit = 256 * 1024;
+    private int $securityInputLengthLimit = 0;
         public function getSecurityInputLengthLimit(): int { return $this->securityInputLengthLimit; }
 
     #/ VARIABLES
@@ -124,12 +124,12 @@ final class Config {
     /**
      * Configure the security settings.
      *
-     * @param int $rateLimit       The number of requests allowed per minute.
-     * @param int $inputLengthLimit The maximum length of input data allowed in bytes.
+     * @param int $rateLimit       The number of requests allowed per minute. Set to 0 to disable rate limiting.
+     * @param int $inputLengthLimit The maximum length of input data allowed in kilobytes. Set to 0 to disable input length limiting.
      */
-    public function configureSecurity(int $rateLimit = 100, int $inputLengthLimit = 256 * 1024): void {
+    public function configureSecurity(int $rateLimit = 0, int $inputLengthLimit = 0): void {
         $this->securityRateLimit = $rateLimit;
-        $this->securityInputLengthLimit = $inputLengthLimit;
+        $this->securityInputLengthLimit = $inputLengthLimit * 1024;
     }
 
     #/ METHODS
